--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPcRku1OrruDTmcEHx6L9Ei",
+      "authorship_tag": "ABX9TyNhpOnnAK9xu+iuZNmMbH7A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1523,8 +1523,7 @@
         "  c = get_cell(p, input12)\n",
         "  return sum(0 if in_range(vec_add(p, d), dimensions) and get_cell(vec_add(p, d), input12) == c else 1 for d in dirs90)\n",
         "\n",
-        "# [(c, len(r), sum(perimeter(p, input12) for p in r)) for (c, r) in regions]\n",
-        "\n",
+        "# [(c, len(r), sum(perimeter(p) for p in r)) for (c, r) in regions]\n",
         "sum(sum(perimeter(p) for p in r) * len(r) for (c, r) in regions)"
       ],
       "metadata": {
@@ -1606,7 +1605,7 @@
         "      # print(y, x, sc)\n",
         "  return sc\n",
         "\n",
-        "# [(c, len(r), side_count((c, r), input12)) for (c, r) in regions]\n",
+        "# [(c, len(r), side_count((c, r))) for (c, r) in regions]\n",
         "sum(len(r) * side_count((c, r)) for (c, r) in regions)"
       ],
       "metadata": {
@@ -1693,11 +1692,11 @@
         "sum(min_cost(machine) or 0 for machine in machines)"
       ],
       "metadata": {
-        "id": "V2QXoTsKhlHD",
-        "outputId": "57b78db4-823f-4c30-e607-1c7ceccca4ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V2QXoTsKhlHD",
+        "outputId": "57b78db4-823f-4c30-e607-1c7ceccca4ee"
       },
       "execution_count": 221,
       "outputs": [
