day 13, part 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyNhpOnnAK9xu+iuZNmMbH7A",
+      "authorship_tag": "ABX9TyPT3w6Kckl+LAI0HBOPpnUc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1709,6 +1709,48 @@
           },
           "metadata": {},
           "execution_count": 221
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 13, part 2, min cost with less attempts"
+      ],
+      "metadata": {
+        "id": "sKsFogKhumRE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def min_cost_2(machine):\n",
+        "  (ax, ay), (bx, by), (px1, py1) = machine\n",
+        "\n",
+        "  (px, py) = (10000000000000 + px1, 10000000000000 + py1)\n",
+        "\n",
+        "  return 0 # TODO\n",
+        "\n",
+        "sum(min_cost_2(machine) or 0 for machine in machines)"
+      ],
+      "metadata": {
+        "id": "yMwLTfgYur-h",
+        "outputId": "7e9bd799-3d9b-44e2-fe87-45586a2afedc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 236
         }
       ]
     }
