--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPT3w6Kckl+LAI0HBOPpnUc",
+      "authorship_tag": "ABX9TyPVJOwl1heLGlamOL+eaiL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 136,
+      "execution_count": 243,
       "outputs": []
     },
     {
@@ -1317,7 +1317,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 5,
+      "execution_count": 237,
       "outputs": []
     },
     {
@@ -1345,13 +1345,13 @@
         "  #cache[s] = res\n",
         "  return res\n",
         "\n",
-        "def iterate(stones):\n",
-        "  return reduce(lambda counter, stone: counter + Counter({new_stone: stones[s] * new_count for new_stone, new_count in Counter(blink_single(stone)).items()}), stones, Counter())"
+        "def blink(stones):\n",
+        "  return reduce(lambda counter, stone: counter + Counter({new_stone: stones[stone] * new_count for new_stone, new_count in Counter(blink_single(stone)).items()}), stones, Counter())"
       ],
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 65,
+      "execution_count": 250,
       "outputs": []
     },
     {
@@ -1369,16 +1369,16 @@
         "stones = Counter(input11)\n",
         "for i in range(25):\n",
         "  stones = blink(stones)\n",
-        "sum(stones.values())"
+        "sum(stones.values())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YG_vzRRXJrbX",
-        "outputId": "84754f4f-9b4f-4479-8402-09dfd6228413"
+        "outputId": "8c8988c9-2419-42d2-c1db-57ec8400fe00"
       },
-      "execution_count": 66,
+      "execution_count": 254,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1388,7 +1388,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 254
         }
       ]
     },
@@ -1406,12 +1406,13 @@
       "source": [
         "stones = Counter(input11)\n",
         "for i in range(75):\n",
-        "  stones = iterate(stones)\n",
+        "  stones = blink(stones)\n",
         "sum(stones.values())"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fPMRBRvfds8G",
         "outputId": "8c9a22ac-d655-4f7a-84b9-c7410d9149ab"
@@ -1528,7 +1529,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "W-Ha-UH3LgzS",
         "outputId": "0f9e3236-139e-404a-852d-d2a390f97ebd"
@@ -1611,7 +1613,8 @@
       "metadata": {
         "id": "SWYo8L6xbrHt",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "16eb93ce-451e-4b0e-f42b-487c35a6caea"
       },
@@ -1693,7 +1696,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "V2QXoTsKhlHD",
         "outputId": "57b78db4-823f-4c30-e607-1c7ceccca4ee"
@@ -1734,11 +1738,12 @@
         "sum(min_cost_2(machine) or 0 for machine in machines)"
       ],
       "metadata": {
-        "id": "yMwLTfgYur-h",
-        "outputId": "7e9bd799-3d9b-44e2-fe87-45586a2afedc",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "yMwLTfgYur-h",
+        "outputId": "7e9bd799-3d9b-44e2-fe87-45586a2afedc"
       },
       "execution_count": 236,
       "outputs": [
