--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPVJOwl1heLGlamOL+eaiL4",
+      "authorship_tag": "ABX9TyOtmi4Jcwg8vrwELyPUSXzo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1683,7 +1683,7 @@
         "  y_max_a = int(py/ay)\n",
         "  y_max_b = int(py/by)\n",
         "\n",
-        "  # if ay/by < 3 go for low a, higher b\n",
+        "  # if ay/by < 3 go for low a, higher b, if ay/by > 3 go for low b, higher a\n",
         "  y = [(a, int((py - a * ay) / by), int(3 * a + (py - a * ay) / by)) for a in range(y_max_a + 1) if (py - a * ay) % by == 0] \\\n",
         "  if ay/by < 3 else \\\n",
         "  [(int((py - b * by) / ay), b, int(3 * (py - b * by) / ay + b)) for b in range(y_max_b + 1) if (py - b * by) % ay == 0]\n",
