--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyOtmi4Jcwg8vrwELyPUSXzo",
+      "authorship_tag": "ABX9TyPw1iJAUHCNFB2Rvlw+wnNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 243,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1317,7 +1317,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1351,7 +1351,7 @@
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 250,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1378,7 +1378,7 @@
         "id": "YG_vzRRXJrbX",
         "outputId": "8c8988c9-2419-42d2-c1db-57ec8400fe00"
       },
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1411,13 +1411,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
         "outputId": "8c9a22ac-d655-4f7a-84b9-c7410d9149ab"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1463,7 @@
       "metadata": {
         "id": "aalsa-dy5ZvV"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1505,7 +1504,7 @@
         "id": "bawcOtASR26A",
         "collapsed": true
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1529,13 +1528,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "W-Ha-UH3LgzS",
         "outputId": "0f9e3236-139e-404a-852d-d2a390f97ebd"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,12 +1611,11 @@
       "metadata": {
         "id": "SWYo8L6xbrHt",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "16eb93ce-451e-4b0e-f42b-487c35a6caea"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1646,12 +1643,12 @@
       "source": [
         "xy = re.compile('.*?: X=?([+-]?\\d+), Y=?([+-]?\\d+)')\n",
         "# machines(button A delta, button B delta, prize pos)\n",
-        "machines = [[tuple([int(s) for s in xy.match(definition).groups()]) for definition in line.split('\\n')] for line in \"\".join([line for line in open(f'drive/MyDrive/AoC/2024/input13.txt')]).split('\\n\\n')]\n"
+        "machines = [[tuple([int(s) for s in xy.match(definition).groups()]) for definition in line.split('\\n')] for line in \"\".join([line for line in open(f'drive/MyDrive/AoC/2024/input13.txt')]).split('\\n\\n')]"
       ],
       "metadata": {
         "id": "usSWJbLkScCR"
       },
-      "execution_count": 214,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1696,13 +1693,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "V2QXoTsKhlHD",
-        "outputId": "57b78db4-823f-4c30-e607-1c7ceccca4ee"
+        "outputId": "29b8cefe-4ff8-4d7a-dd58-66421a394d73"
       },
-      "execution_count": 221,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1712,7 +1708,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 221
+          "execution_count": 15
         }
       ]
     },
@@ -1728,34 +1724,50 @@
     {
       "cell_type": "code",
       "source": [
+        "def check_int(x):\n",
+        "  # account for rounding errors with large numbers\n",
+        "  return abs(x - int(x)) <= 0.001 or abs(x - int(x)) >= 0.999\n",
+        "\n",
         "def min_cost_2(machine):\n",
         "  (ax, ay), (bx, by), (px1, py1) = machine\n",
         "\n",
         "  (px, py) = (10000000000000 + px1, 10000000000000 + py1)\n",
         "\n",
-        "  return 0 # TODO\n",
+        "  # Transform one of the following...\n",
+        "  # px = a*ax + b*bx\n",
+        "  # py = a*ay + b*by\n",
+        "  # ... to get b if a is given and substitute for b in the other expression to get an expression for a without b,\n",
+        "  # calculate a, then calculate b using the initial transformation\n",
+        "  a = (py-px*by/bx)/(ay-ax*by/bx)\n",
+        "  b = (px-a*ax)/bx\n",
         "\n",
-        "sum(min_cost_2(machine) or 0 for machine in machines)"
+        "  # These are linear equations, so there can be only one solution.\n",
+        "  # We consider the solution only if a and b are integers as the cost functions for a and b are discrete.\n",
+        "\n",
+        "  return a*3+b if check_int(a) and check_int(b)  else 0\n",
+        "  # return (a, b, check_int(a), check_int(b))\n",
+        "\n",
+        "sum(min_cost_2(machine) or 0 for machine in machines)\n",
+        "# [min_cost_2(machine) or 0 for machine in machines]"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yMwLTfgYur-h",
-        "outputId": "7e9bd799-3d9b-44e2-fe87-45586a2afedc"
+        "outputId": "fac0eeaf-a4ba-4972-f4d5-69c9ee11c6ae"
       },
-      "execution_count": 236,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "73267584326867.0"
             ]
           },
           "metadata": {},
-          "execution_count": 236
+          "execution_count": 30
         }
       ]
     }
