day 13 part 2, use int

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPw1iJAUHCNFB2Rvlw+wnNZ",
+      "authorship_tag": "ABX9TyPPMP9v3/oBv1gFahCtoczu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1747,7 +1747,7 @@
         "  return a*3+b if check_int(a) and check_int(b)  else 0\n",
         "  # return (a, b, check_int(a), check_int(b))\n",
         "\n",
-        "sum(min_cost_2(machine) or 0 for machine in machines)\n",
+        "int(sum(min_cost_2(machine) or 0 for machine in machines))\n",
         "# [min_cost_2(machine) or 0 for machine in machines]"
       ],
       "metadata": {
@@ -1755,19 +1755,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yMwLTfgYur-h",
-        "outputId": "fac0eeaf-a4ba-4972-f4d5-69c9ee11c6ae"
+        "outputId": "a3bad72a-3002-4630-b8a3-543110069c41"
       },
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "73267584326867.0"
+              "73267584326867"
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 33
         }
       ]
     }
