--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMkGLLc2bzf813Df9H5Eq+X",
+      "authorship_tag": "ABX9TyOtg2m5P0jIJo8Fjb2nEzuL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1188,16 +1188,15 @@
     {
       "cell_type": "code",
       "source": [
-        "input10 = [[int(c) if c.isdigit() else -1 for c in line.strip()] for line in open('drive/MyDrive/AoC/2024/input10.txt')]\n",
-        "height = len(input10)\n",
-        "width = len(input10[0])\n",
+        "input10_chars, height, width = read_grid('input10')\n",
+        "input10 = [[int(c) if c.isdigit() else -1 for c in row] for row in input10_chars]\n",
         "dimensions = (height, width)\n",
         "trailheads = [(y, x) for y in range(height) for x in range(width) if get_cell((y, x), input10) == 0]"
       ],
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": null,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -1226,7 +1225,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -1248,9 +1247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lBaCaS6DZdpi",
-        "outputId": "62bbfc0c-11ae-4c10-8eac-87fc3180986f"
+        "outputId": "95788247-bb16-41f9-b737-1fdb410cf3a0"
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1260,7 +1259,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 124
         }
       ]
     },
@@ -1283,9 +1282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aVweMTquZsTf",
-        "outputId": "86565ccd-404a-4e2b-e5f4-b53d8fc649ad"
+        "outputId": "add66814-951c-496f-f218-2f6471daebb1"
       },
-      "execution_count": null,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1295,7 +1294,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 125
         }
       ]
     },
@@ -1317,7 +1316,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 76,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -1333,7 +1332,7 @@
       "cell_type": "code",
       "source": [
         "def blink_single(s):\n",
-        "  return ['1'] if s == '0' else [s[:(len(s)//2)], f'{int(s[(len(s)//2):])}'] if len(s) % 2 == 0 else [f'{int(s) * 2024}']\n",
+        "  return ['1'] if s == '0' else [f'{int(s) * 2024}'] if len(s) % 2 == 1 else [s[:(len(s)//2)], f'{int(s[(len(s)//2):])}']\n",
         "\n",
         "def blink(stones):\n",
         "  return reduce(lambda counter, stone: counter + Counter({new_stone: stones[stone] * new_count for new_stone, new_count in Counter(blink_single(stone)).items()}), stones, Counter())"
@@ -1341,7 +1340,7 @@
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 77,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -1366,9 +1365,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YG_vzRRXJrbX",
-        "outputId": "1bff42e9-7a4f-4cb6-c7a9-d7c2d4d0b69c"
+        "outputId": "b06bf8c7-abcd-4b7e-fa2a-446ab2b5cd73"
       },
-      "execution_count": 78,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1378,7 +1377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 129
         }
       ]
     },
@@ -1406,7 +1405,7 @@
         "id": "fPMRBRvfds8G",
         "outputId": "c3ac6747-91e9-43b5-942e-1b3eacbedbd5"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1799,7 +1798,7 @@
       "metadata": {
         "id": "cBpq1oZkn9FW"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1831,7 +1830,7 @@
         "id": "KUkeTiSBrjFa",
         "outputId": "f34eb05b-ae85-4909-b88f-513e12dbf9b0"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
