day 15, part 1 complete and 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyOtg2m5P0jIJo8Fjb2nEzuL",
+      "authorship_tag": "ABX9TyMvQ5teQpLIqKW34gqqlA4l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,12 @@
         "dir_left = (0, -1)\n",
         "\n",
         "dirs90 = [dir_up, dir_right, dir_down, dir_left]\n",
+        "dirs90_symbols = {\n",
+        "    '^': dir_up,\n",
+        "    '>': dir_right,\n",
+        "    'v': dir_down,\n",
+        "    '<': dir_left\n",
+        "}\n",
         "turn_right = {dir_up: dir_right, dir_right: dir_down, dir_down: dir_left, dir_left: dir_up}\n",
         "turn_left = {dir_up: dir_left, dir_left: dir_down, dir_down: dir_right, dir_right: dir_up}\n",
         "\n",
@@ -86,7 +92,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1196,7 +1202,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1225,7 +1231,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1249,7 +1255,7 @@
         "id": "lBaCaS6DZdpi",
         "outputId": "95788247-bb16-41f9-b737-1fdb410cf3a0"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1284,7 +1290,7 @@
         "id": "aVweMTquZsTf",
         "outputId": "add66814-951c-496f-f218-2f6471daebb1"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1322,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1340,7 +1346,7 @@
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1367,7 +1373,7 @@
         "id": "YG_vzRRXJrbX",
         "outputId": "b06bf8c7-abcd-4b7e-fa2a-446ab2b5cd73"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1891,6 +1897,193 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 15, input"
+      ],
+      "metadata": {
+        "id": "w4dAp9Ens6YV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input15, _, width = read_grid('input15_example_big')\n",
+        "start_grid = [row for row in input15 if row.startswith('#')]\n",
+        "height = len(start_grid)\n",
+        "start_instructions = [dirs90_symbols[c] for c in reduce(lambda instructions, row: instructions + row, [row for row in input15 if row and not row.startswith('#')], '')]"
+      ],
+      "metadata": {
+        "id": "vpSBxmx-s7T4"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 15, part 1, follow instructions and evaluate box positions"
+      ],
+      "metadata": {
+        "id": "hiI-ayLr7f7f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_moves(pos, dir, what, grid) -> list[tuple[int, int]]:\n",
+        "  new_pos = vec_add(pos, dir)\n",
+        "  if get_cell(new_pos, grid) == '.':\n",
+        "    return [(pos, new_pos, what)]\n",
+        "  if get_cell(new_pos, grid) == '#':\n",
+        "    return []\n",
+        "  if get_cell(new_pos, grid) == 'O':\n",
+        "    box_moves = calc_moves(new_pos, dir, 'O', grid)\n",
+        "    if box_moves:\n",
+        "      return [(pos, new_pos, what)] + box_moves\n",
+        "  return []"
+      ],
+      "metadata": {
+        "id": "Kwd1spA39rdU"
+      },
+      "execution_count": 93,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def move(pos, dir, grid):\n",
+        "  moves = calc_moves(pos, dir, '@', grid)\n",
+        "  if moves:\n",
+        "    m = { t: w for f, t, w in moves }\n",
+        "    w = len(grid[0])  # avoid using global width var here as it varies between part 1 and 2\n",
+        "    return moves[0][1], [''.join('.' if (r, c) == pos else m[(r, c)] if (r, c) in m else get_cell((r, c), grid) for c in range(w)) for r in range(height)]\n",
+        "  return pos, grid\n",
+        "\n",
+        "def next_move(pos, instructions, grid):\n",
+        "  if not instructions:\n",
+        "    return (pos, instructions, grid)\n",
+        "  new_pos, new_grid = move(pos, instructions[0], grid)\n",
+        "  return new_pos, instructions[1:], new_grid"
+      ],
+      "metadata": {
+        "id": "lMB7dQn3vsh1"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "start_pos = [(r, c) for r in range(1, height-1) for c in range(1, width-1) if get_cell((r, c), start_grid) == '@'][0]\n",
+        "pos = start_pos\n",
+        "grid = start_grid\n",
+        "instr = start_instructions\n",
+        "while instr:\n",
+        "  pos, instr, grid = next_move(pos, instr, grid)\n",
+        "\n",
+        "# print(pos)\n",
+        "# for r in grid:\n",
+        "#   print(r)\n",
+        "\n",
+        "sum(r * 100 + c for r in range(height) for c in range(width) if get_cell((r, c), grid) == 'O')"
+      ],
+      "metadata": {
+        "id": "nrOfagoF9oHN",
+        "outputId": "3081a36a-e2f5-4c70-ae07-224cedfde150",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10092"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 15, part 2, wide boxes"
+      ],
+      "metadata": {
+        "id": "-rRXNeDe89cr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "widened = {\n",
+        "    '#': '##',\n",
+        "    'O': '[]',\n",
+        "    '.': '..',\n",
+        "    '@': '@.'\n",
+        "}\n",
+        "widened_start_grid = [''.join(widened[c] for c in row) for row in start_grid]\n",
+        "widened_width = len(widened_start_grid[0])\n",
+        "widened_start_pos = [(r, c) for r in range(1, height-1) for c in range(1, widened_width-1) if get_cell((r, c), widened_start_grid) == '@'][0]\n",
+        "pos = widened_start_pos\n",
+        "grid = widened_start_grid\n",
+        "instr = start_instructions\n",
+        "\n",
+        "# TODO replace calc_moves function\n",
+        "\n",
+        "print(pos)\n",
+        "for r in grid:\n",
+        "  print(r)\n",
+        "\n",
+        "while instr:\n",
+        "  pos, instr, grid = next_move(pos, instr, grid)\n",
+        "\n",
+        "sum(r * 100 + c for r in range(height) for c in range(widened_width) if get_cell((r, c), grid) == '[')\n"
+      ],
+      "metadata": {
+        "id": "qz3JYLCC2TGy",
+        "outputId": "163d9815-65de-4692-b1e7-046823a873ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 8)\n",
+            "####################\n",
+            "##....[]....[]..[]##\n",
+            "##............[]..##\n",
+            "##..[][]....[]..[]##\n",
+            "##....[]@.....[]..##\n",
+            "##[]##....[]......##\n",
+            "##[]....[]....[]..##\n",
+            "##..[][]..[]..[][]##\n",
+            "##........[]......##\n",
+            "####################\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9802"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
     }
   ]
 }
