day 15, part 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMvQ5teQpLIqKW34gqqlA4l",
+      "authorship_tag": "ABX9TyMxkzpeTo9tfXQnT8wNyest",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1991,11 +1991,11 @@
         "sum(r * 100 + c for r in range(height) for c in range(width) if get_cell((r, c), grid) == 'O')"
       ],
       "metadata": {
-        "id": "nrOfagoF9oHN",
-        "outputId": "3081a36a-e2f5-4c70-ae07-224cedfde150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nrOfagoF9oHN",
+        "outputId": "3081a36a-e2f5-4c70-ae07-224cedfde150"
       },
       "execution_count": 96,
       "outputs": [
@@ -2038,52 +2038,21 @@
         "\n",
         "# TODO replace calc_moves function\n",
         "\n",
-        "print(pos)\n",
-        "for r in grid:\n",
-        "  print(r)\n",
-        "\n",
         "while instr:\n",
         "  pos, instr, grid = next_move(pos, instr, grid)\n",
         "\n",
-        "sum(r * 100 + c for r in range(height) for c in range(widened_width) if get_cell((r, c), grid) == '[')\n"
+        "# print(pos)\n",
+        "# for r in grid:\n",
+        "#   print(r)\n",
+        "\n",
+        "sum(r * 100 + c for r in range(height) for c in range(widened_width) if get_cell((r, c), grid) == '[')"
       ],
       "metadata": {
-        "id": "qz3JYLCC2TGy",
-        "outputId": "163d9815-65de-4692-b1e7-046823a873ea",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "collapsed": true,
+        "id": "qz3JYLCC2TGy"
       },
-      "execution_count": 97,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(4, 8)\n",
-            "####################\n",
-            "##....[]....[]..[]##\n",
-            "##............[]..##\n",
-            "##..[][]....[]..[]##\n",
-            "##....[]@.....[]..##\n",
-            "##[]##....[]......##\n",
-            "##[]....[]....[]..##\n",
-            "##..[][]..[]..[][]##\n",
-            "##........[]......##\n",
-            "####################\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9802"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 97
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
